Fixed nav spacing

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -168,7 +168,7 @@ body {
       display: block; /*for the img inside your div */
       margin: 0 auto;
       margin-top: 57px;
-      margin-bottom: 15px;
+      margin-bottom: 25px;
       cursor: pointer;
     }
 
@@ -202,7 +202,7 @@ body {
       // max-height: 495px;
       display: block; /*for the img inside your div */
       margin: 0 auto;
-      margin-top: 124px;
+      margin-top: 160px;
     }
     p {
       line-height: 33px;
@@ -400,7 +400,7 @@ body {
     background-color: #ff0000;
     width: 100%;
     display: block;
-    height: 598px;
+    height: 620px;
     margin-top: 124px;
     position: relative;
     font-size: 19px;
@@ -453,7 +453,6 @@ body {
           -webkit-appearance: none;
           font-size: 19px;
           background-color: white;
-          text-transform: uppercase;
           border: 0 none;
           cursor: pointer;
           font-family: Helvetica, Arial, "Lucida Grande", sans-serif;
